--- a/src/pieces.scss
+++ b/src/pieces.scss
@@ -71,12 +71,6 @@
     cursor: grabbing;
   }
 
-  &-hiddenControls {
-    .orp_pieceButton {
-      visibility: hidden;
-    }
-  }
-
   &-hidden {
     display: none;
   }
